--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello-world",
-  "description": "hello world test app",
+  "name": "baseball-api",
+  "description": "Serving up PitchF/X data",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
